objects/Transportation_Address__c.object
<CustomObject>
    <description>Integrated object to store Transportation Request Address coming in from the ACV platform.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>Enter a valid ISO 3166 two-letter country code. Ex: MX = Mexico</inlineHelpText>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional information about the address. Usually contains hours at which the location is open or any special instructions that a carrier may need to know when dropping off or picking up a vehicle.

This filed is mapped from transportation_address.notes in tools. The field in MySQL is mediumtext and can contain up to 16 million character but this field can only hold 131,072 in Salesforce.</description>
        <inlineHelpText>Additional Instructions that can be useful for a carrier to know.</inlineHelpText>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>external id used for integration with ACV System</description>
        <externalId>true</externalId>
        <label>Transportation Address Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Transportation Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transportation Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>